--- a/React_Estudos/Autentification/01-starting-project/backend/package.json
+++ b/React_Estudos/Autentification/01-starting-project/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend-api": "file:",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
