--- a/React_Estudos/Autentification/01-starting-project/frontend/package.json
+++ b/React_Estudos/Autentification/01-starting-project/frontend/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^16.1.0",
         "@testing-library/user-event": "^14.5.2",
         "react": "^19.0.0",
+        "react-complete-guide": "file:",
         "react-dom": "^19.0.0",
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
