--- a/React_Estudos/DeploySistem/01-starting-project/package.json
+++ b/React_Estudos/DeploySistem/01-starting-project/package.json
@@ -10,6 +10,7 @@
         "react-dom": "^19.0.0",
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
+        "react-temp": "file:",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
