--- a/React_Estudos/ReactQueryBegins/01-starting-project/backend/package.json
+++ b/React_Estudos/ReactQueryBegins/01-starting-project/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Maximilian Schwarzmüller (Academind GmbH)",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
