--- a/React_Estudos/ReactQueryBegins/01-starting-project/package.json
+++ b/React_Estudos/ReactQueryBegins/01-starting-project/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.66.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-query": "file:",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
