--- a/React_Estudos/NextJSbigProgram/05-onwards-foodies-starting-project/package.json
+++ b/React_Estudos/NextJSbigProgram/05-onwards-foodies-starting-project/package.json
@@ -13,7 +13,9 @@
     "foodies": "file:",
     "next": "^15.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
