--- a/React_Estudos/NextJSbigProgram/05-onwards-foodies-starting-project/package.json
+++ b/React_Estudos/NextJSbigProgram/05-onwards-foodies-starting-project/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.777.0",
     "better-sqlite3": "^11.9.1",
     "foodies": "file:",
     "next": "^15.0.0",
